tests/bad/semantic/variable_with_void_type2.lat
// Author: Julian Prolejko 420564
// void variable type

int main() {
   void[] x;
   return 0;
}
